--- a/styleSCSS.scss
+++ b/styleSCSS.scss
@@ -11,7 +11,7 @@ body{
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url("img/one.jpg");
+        background-image: url("img/two.jpg");
         background-size: 100% 100%;
 
         .opasity{
